jenkins/manifests/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-agents
