jenkins/manifests/jenkins-03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins-server
    spec:
      serviceAccountName: jenkins-admin
      nodeSelector:
        jenkins-node: "true"
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        imagePullPolicy: Always
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - name: httpport
          containerPort: 8080
        - name: jnlpport
          containerPort: 50000
        livenessProbe:
          httpGet:
            path: "/login"
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: "/login"
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: jenkins-data
          mountPath: /var/jenkins_home
        - name: host-mnt
          mountPath: /mnt
      volumes:
      - name: jenkins-data
        persistentVolumeClaim:
          claimName: jenkins-pv-claim
      - name: host-mnt
        hostPath:
          path: /mnt
          type: DirectoryOrCreate
